Bug 1633469 - Propagate failure of Dispatch in GetSubscriptionCallback::OnPushSubscription. r=jstutte

Differential Revision: https://phabricator.services.mozilla.com/D94077